Bug 286741 - last.fm service says it cannot find kdewallet
Summary: last.fm service says it cannot find kdewallet
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Services/Last.fm (other bugs)
Version First Reported In: 2.5-git
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: 2.5
Assignee: Amarok Bugs
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2011-11-16 00:19 UTC by Giovanni Tirloni
Modified: 2011-12-11 15:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Giovanni Tirloni 2011-11-16 00:19:36 UTC
Version:           2.4.3 (using KDE 4.7.3) 
OS:                Linux

When testing the just created account, the Last.fm service in Amarok will say it could not find KDE Wallet and ask to save the password locally.

The thing is, KDE Wallet is running since it bugs me every few minutes to type my password :)

Reproducible: Always

Steps to Reproduce:
Enable Last.fm service
Type user / password
Test account
Save

Actual Results:  
Last.fm couldn't see that KDE Wallet was running.

Expected Results:  
It should see KDE Wallet is running and use it.
Comment 1 Myriam Schweingruber 2011-11-16 10:51:56 UTC
Just tested here, it does indeed not see an already open Wallet
Comment 2 Matěj Laitl 2011-12-11 15:18:40 UTC
Git commit 0fa77bb9826e98ae2ff1c782eb6b11197153b2d3 by Matěj Laitl.
Committed on 11/12/2011 at 16:15.
Pushed by laitl into branch 'master'.

Fix bogus logic when opening KWallet in Last.fm configuration

The logic is still a bit convoluted, but at a last-minute fix this
suffices and should introduce no problems.

BUG: 286741
FIXED-IN: 2.5

M  +1    -0    ChangeLog
M  +15   -4    src/services/lastfm/LastFmServiceConfig.cpp
M  +7    -0    src/services/lastfm/LastFmServiceConfig.h

http://commits.kde.org/amarok/0fa77bb9826e98ae2ff1c782eb6b11197153b2d3