Fix bogus logic when opening KWallet in Last.fm configuration

The logic is still a bit convoluted, but at a last-minute fix this
suffices and should introduce no problems.

BUG: 286741
FIXED-IN: 2.5